--- a/app/views/question_sets/export.erb
+++ b/app/views/question_sets/export.erb
@@ -1,8 +1,11 @@
 <% @question_set.questions.each do |q| %>
-<%= q.question %>
+[#<%= q.number %>] <%= q.question %>
 <% q.answers.each do |a| %>
 <%= a.correct ? '>>>' : '' %><%= a.letter %>) <%= a.answer %>
 <% end %>
 
 
+<% end %>
+<% unless @options.empty? %>
+<options> <%= JSON.pretty_generate(@options) %>
 <% end %>
