--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,5 +11,14 @@
  * file per style scope.
  *
  */
+@import 'base/epiceditor';  
+@import 'preview/bartik';  
+@import 'preview/github';  
+@import 'preview/preview-dark';  
+@import 'editor/epic-dark';  
+@import 'editor/epic-light';  
+
+
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
