--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,6 +6,14 @@
     %title QAB
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
+    %script{type: "text/x-mathjax-config"}
+      :plain
+        MathJax.Hub.Config({
+          tex2jax: {
+            inlineMath: [["^^","^^"]]
+          }
+        });
+    = javascript_include_tag 'http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML'
     = csrf_meta_tags
   %body
     = render 'layouts/navigation'
