--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -8,7 +8,7 @@
         %span.icon-bar
         %span.icon-bar
         %span.icon-bar
-      = link_to 'QAB'.upcase, root_path, class: 'navbar-brand'
+      = link_to 'QAB', root_path, class: 'navbar-brand'
     .collapse.navbar-collapse
       %ul.nav.navbar-nav
         = render 'layouts/navigation_links'
