--- a/app/views/question_sets/show.html.haml
+++ b/app/views/question_sets/show.html.haml
@@ -6,7 +6,9 @@
     Questions count:
     = @question_set.questions.count
   .pull-right
-    = link_to 'Back to subject', subject_path(@question_set.subject), class: 'btn btn-default'
+    .btn-group
+      = link_to 'Export to drill format', export_question_set_path(@question_set, format: :plain), class: 'btn btn-primary'
+      = link_to 'Back to subject', subject_path(@question_set.subject), class: 'btn btn-default'
 - if @question_set.questions.present?
   - @question_set.questions.each_slice(@question_set.questions.count/3) do |slice|
     .col-sm-6.col-md-4
